Disable adding event when not logged in

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -5,6 +5,7 @@
 </div>
 
 <button mat-fab
+        [disabled]="!dataService.loggedIn"
         class="float-fixed-right-bottom"
         (click)="AddEvent()">
     <mat-icon>add</mat-icon>
