--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -54,6 +54,17 @@
 
   <div>
     <mat-form-field class="full-width-details">
+      <mat-select [(ngModel)]="event.bodies_id" placeholder="Bodies" multiple>
+        <mat-option *ngFor="let body of dataService.GetBodiesWithPermission('AddE')"
+                    [value]="body.id">
+                {{ body.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field class="full-width-details">
       <textarea matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="2"
                 matAutosizeMaxRows="6" [(ngModel)]="event.description">
       </textarea>
