Add edit button to event-details

--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -33,6 +33,13 @@
 .card-header {
     padding: 12px;
     padding-bottom: 3px;
+    position: relative;
+}
+
+.edit-button {
+    position: absolute;
+    top: 12px;
+    right:25px;
 }
 
 .event-name {
