--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -14,6 +14,12 @@
       <div class="card-header">
         <div class="event-name">{{ event.name }}</div>
         <div class="event-time">{{ dataService.GetDate(event.start_time) }} | {{ event.venues_str }}</div>
+        <button mat-mini-fab color="accent"
+              (click)="openEventEdit()"
+              class="edit-button"
+              *ngIf="dataService.CanEditEvent(event)">
+            <mat-icon>edit</mat-icon>
+        </button>
       </div>
     </div>
 
