--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,13 @@ body {
     height: 70px;
 }
 
+.sub-card {
+    max-width: 428px;
+    height:40px;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
 @media (max-width: 767px) {
     .toolbar-margin {
         height: 56px;
