Fix multi-line event description

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -28,7 +28,7 @@
         <button mat-button>GOING</button>
     </div>
     <div class="description">
-      <p>
+      <p class="multi-line-text">
         {{ event.description }}
       </p>
     </div>
