--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,3 +1,9 @@
+<div class="loading-spinner">
+    <mat-spinner *ngIf="!event"
+                mode="indeterminate">
+    </mat-spinner>
+</div>
+
 <div class="full-container">
   <div *ngIf="event" class="detail-card">
     <div class='theme-header'>
