--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,15 @@
 <div #swipeArea id="swipe-right-area" sidebarjsOpen (panright)="clickHamburger()"></div>
 
 <mat-toolbar class="example-toolbar" color="primary">
-    <button mat-icon-button sidebarjsOpen><mat-icon>menu</mat-icon></button>
+    <button mat-icon-button
+            sidebarjsOpen
+            *ngIf="getState(o)==='base'">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <button mat-icon-button
+            *ngIf="getState(o)==='overlay'">
+        <mat-icon>arrow_back</mat-icon>
+    </button>
 
     <h1 class="example-app-name">
         {{ this.titleService.getTitle() }}
@@ -29,7 +37,7 @@
 </mat-toolbar>
 
 <div id="outlet">
-    <router-outlet></router-outlet>
+    <router-outlet #o="outlet"></router-outlet>
 </div>
 
 </ng-container>
