Update events chip on calendar

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,7 +2,7 @@
     <xunk-calendar [selectedDate]="selDate"></xunk-calendar>
     <mat-chip-list class="mat-chip-list-stacked">
         <mat-chip color="accent" selected="true" id="head-chip">
-            GOGOGO {{selDate.date}}
+            {{ GetCount(selDate) }}
         </mat-chip>
     </mat-chip-list>
 
