--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<div class="calendar-container mat-elevation-z4" *ngIf="events">
+<div class="full-container mat-elevation-z4" *ngIf="events">
     <xunk-calendar [selectedDate]="selDate"></xunk-calendar>
     <mat-chip-list class="mat-chip-list-stacked">
         <mat-chip color="accent" selected="true" id="head-chip">
