--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,11 +1,9 @@
-<div class="head-card">
-    <div style="display: flex;">
-        <img class="profile-pic"
-             [src]="profilePic">
-        <div>
-            <div class="header-title">{{ userName }}</div>
-            <div>{{ ldap }}</div>
-        </div>
+<div class="head-card primary-background-color">
+    <img class="profile-pic"
+         [src]="profilePic">
+    <div>
+        <div>{{ userName }}</div>
+        <div>{{ ldap }}</div>
     </div>
 </div>
 
