Add Roboto, fix more styles

--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -13,7 +13,7 @@
        src-fallback="/assets/add_image_placeholder.png"
        (click)="file.click()">
 
-  <div class="card-header">
+  <div class="card-header primary-background-color">
       <mat-form-field color="accent" class="full-width">
         <input [(ngModel)]="event.name" matInput required
                name="event_name" placeholder="Event Name">
