--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -6,8 +6,8 @@
 
 <div class="full-container">
   <div *ngIf="event" class="detail-card">
-    <div class='theme-header'>
-      <img style="width:100%; height:auto;"
+    <div class="theme-header primary-background-color">
+      <img class="event-image"
            [src]="event.image_url"
            src-fallback="/assets/placeholder.png">
 
