--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 html {
     overflow-y: scroll;
@@ -6,6 +7,9 @@ html {
 }
 
 body, .image-background {
+    /* Set font family */
+    font-family: 'Roboto', sans-serif;
+
     background-image: url("/assets/tile.jpg");
     background-repeat: repeat;
     background-attachment: fixed;
