Remove shadow from edit event button

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -17,6 +17,7 @@
         <button mat-mini-fab color="accent"
               (click)="openEventEdit()"
               class="edit-button"
+              style="box-shadow: none"
               *ngIf="dataService.CanEditEvent(event)">
             <mat-icon>edit</mat-icon>
         </button>
