--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -3,7 +3,7 @@
          [src]="profilePic">
     <div>
         <div>{{ userName }}</div>
-        <div>{{ ldap }}</div>
+        <div id="ldap">{{ ldap }}</div>
     </div>
 </div>
 
