Add some layout to user-detail

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,5 +1,5 @@
 <div class="head-card primary-background-color">
-    <img class="profile-pic"
+    <img class="profile-pic img-circle"
          [src]="profilePic">
     <div>
         <div>{{ userName }}</div>
