--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -13,17 +13,11 @@
     </mat-chip-list>
 
     <br>
-    <ng-container>
-        <mat-card *ngFor="let event of GetDateEvents(selDate)"
+
+    <app-event-card *ngFor="let event of GetDateEvents(selDate)"
                     (click)="openEvent(event)"
-                    class="sub-card">
-            <mat-card-header>
-                <img mat-card-avatar [src]="event.image_url" src-fallback="/assets/placeholder.png"/>
-                <mat-card-title>{{ event.name }}</mat-card-title>
-                <mat-card-subtitle>{{ dataService.GetDate(event.start_time) }} | {{ event.venues_str }}</mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
-    </ng-container>
+                    [event]="event">
+    </app-event-card>
 </div>
 
 <button mat-fab
