--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -32,14 +32,10 @@
           </mat-card>
       </mat-tab>
       <mat-tab label="Events">
-        <mat-card *ngFor="let event of profile.events_going.concat(profile.events_interested)"
-                   class="sub-card">
-          <mat-card-header>
-            <img mat-card-avatar [src]="event.image_url" src-fallback="/assets/placeholder.png"/>
-            <mat-card-title>{{ event.name }}</mat-card-title>
-            <mat-card-subtitle>{{ dataService.GetDate(event.start_time) }} | {{ event.venues_str }}</mat-card-subtitle>
-          </mat-card-header>
-        </mat-card>
+        <app-event-card
+            *ngFor="let event of profile.events_going.concat(profile.events_interested)"
+             [event]="event">
+        </app-event-card>
       </mat-tab>
   </mat-tab-group>
 
