Navigate to own profile on clicking header in navmenu

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,4 +1,5 @@
-<div class="head-card primary-background-color">
+<div class="head-card primary-background-color"
+     (click)="OpenMyProfile()">
     <img class="profile-pic img-circle"
          [src]="profilePic">
     <div>
