--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container" *ngIf="!authenticating">
-  <img src="/assets/tile_red.jpg" class="login-button">
+  <img src="https://angular.io/assets/images/logos/angular/angular.svg" class="login-button">
   <button mat-raised-button
           (click)='login()'
           color="accent"
