Add fallback image to user-details

--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -8,6 +8,7 @@
   <!-- Head information -->
   <div id="head">
     <img [src]="profile.profile_pic"
+         src-fallback="/assets/useravatar.jpg"
          class="profile-pic img-circle">
     <div id="info-header">
       <b>{{ profile.name }}</b><br>
