--- a/src/app/body-card/body-card.component.html
+++ b/src/app/body-card/body-card.component.html
@@ -1,6 +1,8 @@
 <mat-card *ngIf="body" class="sub-card">
   <mat-card-header>
-    <img mat-card-avatar [src]="body.image_url" />
+    <img mat-card-avatar
+        [src]="body.image_url" 
+         src-fallback="/assets/iitb_logo.svg"/>
     <mat-card-title>{{ body.name }}</mat-card-title>
     <mat-card-subtitle>{{ body.description }}</mat-card-subtitle>
   </mat-card-header>
