Remove some images when failing loading

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -9,7 +9,7 @@
     <div class="theme-header primary-background-color">
       <img class="event-image"
            [src]="event.image_url"
-           src-fallback="/assets/placeholder.png">
+           alt="">
 
       <div class="card-header">
         <div class="event-name">{{ event.name }}</div>
