--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -6,7 +6,7 @@
 
 <div *ngIf="events" class="events-list mat-elevation-z3" [@enterLeft]='bstr(abln(events)&&!mobileQuery.matches)'>
     <mat-card class="head-card" (click)=OpenEvent(events[0])>
-        <img mat-card-image [src]="events[0].image_url">
+        <img mat-card-image [src]="events[0].image_url" alt="">
         <div> {{ events[0].name }} </div>
         <span class="subhead">{{ dataService.GetDate(events[0].start_time) }} | {{ events[0].venues_str }}</span>
     </mat-card>
