--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -43,12 +43,18 @@
     </mat-form-field>
   </div>
 
-  <div class="full-width-details" *ngFor="let vn of event.venue_names; let i = index">
+  <div class="full-width-details" *ngFor="let vn of event.venues; let i = index">
     <mat-form-field style="width: calc(98% - 50px); left: 1%;">
-        <mat-select [(ngModel)]="event.venue_names[i]" placeholder="Venues">
-            <mat-option *ngFor="let venue of venuesList" [value]="venue">{{venue}}</mat-option>
-        </mat-select>
+        <input matInput placeholder="Venue" aria-label="Venue"
+              [matAutocomplete]="venueAuto" [(ngModel)]="vn.name">
     </mat-form-field>
+
+    <mat-autocomplete #venueAuto="matAutocomplete">
+      <mat-option *ngFor="let venue of filterVenues(vn.name)" [value]="venue">
+        {{ venue }}
+      </mat-option>
+    </mat-autocomplete>
+
     <button *ngIf="i==0" (click)="AddVenue()" mat-icon-button><mat-icon>add</mat-icon></button>
     <button *ngIf="i!=0" (click)="RemoveVenue(i)" mat-icon-button><mat-icon>remove</mat-icon></button>
   </div>
