Make description box big by default, disable autoresize

--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -76,8 +76,8 @@
 
   <div>
     <mat-form-field class="full-width-details">
-      <textarea matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="2"
-                matAutosizeMaxRows="6" [(ngModel)]="event.description">
+      <textarea matInput placeholder="Description"
+                [(ngModel)]="event.description" rows=8>
       </textarea>
     </mat-form-field>
   </div>
