--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -15,8 +15,9 @@
 
   <div class="card-header primary-background-color">
       <mat-form-field color="accent" class="full-width">
-        <input [(ngModel)]="event.name" matInput required
+        <input [(ngModel)]="event.name" matInput required #eventName
                name="event_name" placeholder="Event Name">
+        <mat-hint align="end">{{eventName.value.length}} / 50</mat-hint>
       </mat-form-field>
   </div>
 </div>
