Change going and interested buttons to checkbox

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -25,8 +25,9 @@
     </div>
 
     <div style="text-align:center">
-        <button mat-button>INTERESTED</button>
-        <button mat-button>GOING</button>
+        <mat-checkbox>INTERESTED</mat-checkbox>
+        &nbsp;&nbsp;&nbsp;
+        <mat-checkbox>GOING</mat-checkbox>
     </div>
     <div class="description">
       <p class="multi-line-text">
