--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -1,3 +1,30 @@
-<p>
-  body-details works!
-</p>
+<div class="loading-spinner">
+    <mat-spinner *ngIf="!body"
+                mode="indeterminate">
+    </mat-spinner>
+</div>
+
+<div class="full-container">
+    <div *ngIf="body" class="detail-card">
+      <div class="theme-header primary-background-color">
+        <img class="body-image"
+             [src]="body.image_url"
+             alt="">
+  
+        <div class="card-header">
+          <div class="body-name">{{ body.name }}</div>
+          <button mat-mini-fab color="accent"
+                class="edit-button"
+                style="box-shadow: none">
+              <mat-icon>edit</mat-icon>
+          </button>
+        </div>
+      </div>
+
+      <div class="description">
+        <p class="multi-line-text">
+          {{ body.description }}
+        </p>
+      </div>
+    </div>
+  </div>
