Add link to body details from card, add event cards to body details

--- a/src/app/body-card/body-card.component.html
+++ b/src/app/body-card/body-card.component.html
@@ -1,4 +1,6 @@
-<mat-card *ngIf="body" class="sub-card">
+<mat-card *ngIf="body"
+          class="sub-card"
+          [routerLink]="['/body-details', body.id]">
   <mat-card-header>
     <img mat-card-avatar
         [src]="body.image_url" 
