--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -26,5 +26,12 @@
           {{ body.description }}
         </p>
       </div>
+
+      <div class="subtitle">Upcoming Events</div>
+      <app-event-card *ngFor="let event of body.events"
+                    [routerLink]="['/event-details', event.id]"
+                    [event]="event">
+      </app-event-card>
+
     </div>
   </div>
