--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -44,3 +44,9 @@
     margin-top: -15px;
     padding-bottom: 10px;
 }
+
+.subtitle {
+    margin-left: 10px;
+    font-weight: bold;
+    padding-bottom: 2px;
+}
