--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -1,6 +1,7 @@
 .detail-card {
     z-index: 3;
     min-height: 60vh;
+    margin-bottom: 0;
 }
 
 @media (max-width: 767px) {
@@ -10,7 +11,6 @@
 
     .detail-card {
         min-height: 100vh;
-        margin-bottom: 0;
     }
 }
 
@@ -48,5 +48,7 @@
 .subtitle {
     margin-left: 10px;
     font-weight: bold;
-    padding-bottom: 2px;
+    padding-bottom: 6px;
+    color: #777;
+    font-size: 10pt;
 }
