Fix some styles

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="full-container">
-    <div *ngIf="body" class="detail-card">
+    <div *ngIf="body" class="detail-card mat-elevation-z3">
       <div class="theme-header primary-background-color">
         <img class="body-image"
              [src]="body.image_url"
