--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,8 +1,15 @@
 <mat-card class="sub-card" *ngIf="profile">
   <mat-card-header>
     <img mat-card-avatar [src]="profile.profile_pic" src-fallback="/assets/useravatar.jpg"/>
-    <mat-card-title>SDFSD</mat-card-title>
-    <mat-card-subtitle>ewrwer</mat-card-subtitle>
+    <mat-card-title>{{profile.name}}</mat-card-title>
+    <mat-card-subtitle>
+      <ng-container *ngIf="profile.about; else noAbout">
+        {{profile.about}}
+      </ng-container>
+      <ng-template #noAbout>
+        <mat-card-subtitle>IITB User</mat-card-subtitle>
+      </ng-template>
+    </mat-card-subtitle>
   </mat-card-header>
 </mat-card>
   
